# parallel-mcts-arena-rs

./: .gitignore  ADDING_NEW_GAMES.md  ARCHITECTURE.md  Cargo.toml  GEMINI.md  GPU_ARCHITECTURE.md  GRID_DISPLAY_IMPLEMENTATION.md  HYBRID_ALLOCATOR_DESIGN.md  HYBRID_ALLOCATOR_SESSION_SUMMARY.md  README.md  RESPONSIVE_FEATURES.md  build.rs
crates/mcts-shaders/: Cargo.toml
crates/mcts-shaders/src/: lib.rs
crates/mcts-shared/: Cargo.toml
crates/mcts-shared/src/: lib.rs
docs/: CODE_DOCUMENTATION.md  DOCUMENTATION_SUMMARY.md  README.md  RUST_GPU_INVESTIGATION.md  SOURCE_DOCUMENTATION.md  UI_COMPONENTS.md
docs/how_to_play/: blokus.txt  connect4.txt  gomoku.txt  hive.txt  othello.txt
examples/: gpu_mcts_benchmark.rs
scripts/: ensure-rustc-sources.ps1.txt
src/: app.rs  clipboard.rs  game_controller.rs  game_wrapper.rs  lib.rs  main.rs  tui.rs  urgent_event_logger.rs.bak
src/components/: core.rs  events.rs  manager.rs  mod.rs
src/components/blokus/: DOCUMENTATION.md  board.rs  click_handler.rs  enhanced_piece_grid.rs  enhanced_piece_selector.rs  game_stats.rs  grid_border.rs  grid_layout.rs  improved_piece_selector.rs  instruction_panel.rs  mod.rs  piece_cell.rs  piece_selector.rs  piece_shape.rs  piece_visualizer.rs  player_panel.rs  responsive_piece_grid.rs
src/components/ui/: board_cell.rs  common.rs  game.rs  game_over.rs  game_selection.rs  generic_grid.rs  how_to_play.rs  in_game.rs  menu.rs  mod.rs  move_history.rs  player_config.rs  responsive_layout.rs  root.rs  scrollable.rs  settings.rs  theme.rs
src/games/: blokus.rs  connect4.rs  gomoku.rs  hive.rs  mod.rs  othello.rs
src/gpu/: accelerator.rs  context.rs  embedded_wgsl.rs  mcts_gpu.rs  mcts_othello.rs  mcts_othello_mcts_test.rs  mod.rs  shader_debug.rs  shaders.rs  test_prune_kernel_pipeline_layout.rs  test_urgent_event.rs  urgent_event_logger.rs  urgent_event_logger_debug.rs
src/gpu/shaders/: blokus.wgsl  common.wgsl  connect4.wgsl  gomoku.wgsl  grid_common.wgsl  hive.wgsl  mcts_othello.wgsl  mcts_tree.wgsl  othello.wgsl  puct.wgsl  test_urgent_event.wgsl
src/gui/: app.rs  colors.rs  mod.rs  renderer.rs  window.rs
src/gui/game_renderers/: blokus.rs  connect4.rs  gomoku.rs  hive.rs  mod.rs  othello.rs  rotatable_board.rs
src/tui/: blokus_ui.rs  input.rs  layout.rs  mod.rs  mouse.rs  widgets.rs
src/tui/games/: connect4.rs  gomoku.rs  mod.rs  othello.rs
tests/: cpu_to_cpu_urgent_event_logging.rs  dx12_init.rs  gpu_root_expansion_test.rs  gpu_urgent_event_logging.rs  reproduce_pruning_failure.rs  test_emission_guard_global_atomic.rs  test_emission_guard_multiple_workgroups.rs  test_group5_binding0_storage.rs  test_main_kernel_emission_guard_bug.rs  test_main_kernel_reroot_buffer_write.rs  test_mutex_bisect.rs  test_no_early_exit.rs  test_once_per_move_reroot_end_event.rs  test_once_per_move_reroot_start_event.rs  test_prune_kernel_pipeline_layout.rs  test_real_kernel_emission_guard.rs  test_real_kernel_emission_guard_many_legal_moves.rs  test_real_kernel_emission_guard_multi_workgroup.rs  test_real_kernel_emission_guard_nontrivial_board.rs  wgpu_device_smoke.rs
tools/spirv_inspect/: Cargo.toml
tools/spirv_inspect/src/: main.rs
